--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -14,11 +10,12 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  background-color: #a3a2a2;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
