feat: add quiz page with questions and answers

--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,8 @@
   /* background-color: #282c34; */
   background-color: #a3a2a2;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
 
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* font-size: calc(10px + 2vmin); */
   color: white;
 }
 
