feat: new homepage layout and updated type on quiz questions

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 
 .App-header {
   /* background-color: #282c34; */
-  background-color: #a3a2a2;
+  background-color: #f4ecd5;
   min-height: 100vh;
 
   /* font-size: calc(10px + 2vmin); */
